examples/type_system/failing/81_match_bool_missing_false.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E015: Bool match missing false branch.
let b = true;

match b {
    true -> 1
};
